# catville

./: LICENSE  README.md  agent.py  catville.py  daily_summary.py  publish_buttondown.py  pyproject.toml  state_io.py
.github/workflows/: publish_buttondown.yml  simulation.yml
logs/01/01/: 2026.txt
logs/01/02/: 2026.txt
logs/01/03/: 2026.txt
logs/01/04/: 2026.txt
logs/01/05/: 2026.txt
logs/01/06/: 2026.txt
logs/01/07/: 2026.txt
logs/01/08/: 2026.txt
logs/01/09/: 2026.txt
logs/01/10/: 2026.txt
logs/01/11/: 2026.txt
logs/01/12/: 2026.txt
logs/01/13/: 2026.txt
logs/01/14/: 2026.txt
logs/01/15/: 2026.txt
logs/01/16/: 2026.txt
logs/01/17/: 2026.txt
logs/01/18/: 2026.txt
logs/01/19/: 2026.txt
logs/01/20/: 2026.txt
logs/01/21/: 2026.txt
logs/01/22/: 2026.txt
logs/01/23/: 2026.txt
logs/01/24/: 2026.txt
logs/01/25/: 2026.txt
logs/01/26/: 2026.txt
logs/01/27/: 2026.txt
logs/01/28/: 2026.txt
logs/01/29/: 2026.txt
logs/01/30/: 2026.txt
logs/01/31/: 2026.txt
logs/02/01/: 2026.txt
logs/02/02/: 2026.txt
logs/02/03/: 2026.txt
logs/02/04/: 2026.txt
logs/02/05/: 2026.txt
logs/02/06/: 2026.txt
logs/02/07/: 2026.txt
logs/02/08/: 2026.txt
logs/02/09/: 2026.txt
logs/02/10/: 2026.txt
logs/02/11/: 2026.txt
logs/02/12/: 2026.txt
logs/02/13/: 2026.txt
logs/02/14/: 2026.txt
logs/02/15/: 2026.txt
logs/02/16/: 2026.txt
logs/02/17/: 2026.txt
logs/02/18/: 2026.txt
logs/02/19/: 2026.txt
logs/02/20/: 2026.txt
logs/02/21/: 2026.txt
state/: state.json
summaries/: index.md
tests/: test_agents.py
(+607 files in other folders)
