[tool.poetry]
name = "catville"
version = "0.1.0"
description = "AI Agent Simulation"
authors = ["Cat Weiss"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
langchain = "^0.3.25"
langchain-community = "^0.3.23"
langchain-ollama = "^0.3.2"
ollama = "^0.4.8"
transformers = "^4.51.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
